Revision history for Perl extension Win32::OLE.

Changes in version 0.01-0.03 are by Gurusamy Sarathy. All other changes
are by Jan Dubois unless attributed otherwise.

0.1708  April 17th 2008
	- new version for separate upload to CPAN
	- updated email addresses
	- simplified Makefile.PL
	- added META.yml
	- additional casts to suppress compiler warnings under Win64

0.1707  unreleased, August 7th 2006
	- add special support for tlbinf32.dll from Microsoft

0.1706	unreleased, June 8th 2006
	- add support for receiving VT_RECORD and arrays of VT_RECORD
	- improve error handling logic

0.1705	unreleased, March 28th 2006
	- fix memory leak in Win32::OLE::Enum::All() and Win32::OLE::Enum::Next()
	  (as a side effect collections containing undefined elements,
	   like VT_NULL or VT_EMPTY variant, will be handled correctly)

0.1704	unreleased, November 28th 2005
	- in ClearVariantObject() check IDispatch/IUnknown variants
	  for NULL before calling Release() on them
	- Win32::OLE::Const: check for 32 bit typelibs even in Win64 mode
	- Don't load hidden or restricted types in Win32::OLE::Const.
	  This fixes the "emptyenum redefined" problem with the "Microsoft
	  Word" type library.

0.1703	September 6th 2005
	- remove all USING_WIDE() codepaths
	- use PTR2IV() and INT2PTR() macros
	- make everything work with current cygwin

0.1702	unreleased, Sun, September 5th 2004
	- fix freeing of VT_BYREF Win32::OLE::Variant objects

0.1701	unreleased, Thu, August 28th 2003
	- add Win32::OLE->Option(Variant => 1) support

0.17	Mon, August 11th 2003
	- add IsNothing and IsNullString predicate methods to
	  Win32::OLE::Variant
	- nullstring() variants used to be converted to undef.  They
	  are now converted to the empty string.

0.1604	unreleased, Thu, July 22nd 2003
	- fix passing nullstring() as a parameter.  VariantCopy() used
	  to turn it back into an empty string.

0.1603	unreleased, Thu, March 4th 2003
	- fix PL_dowarn test to only check the relevant bit
